[package]
name = "injectable_macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "^1.0",features = ["full","extra-traits"]}
quote = "^1.0"
thiserror="^1.0"
proc-macro2="^1.0"
rstest="^0.13"
proc-macro-error="^1.0"
to-syn-error="1.0"
regex="1"

[dev-dependencies]
assert-parse="1.0"
assert-parse-register-assert-macro="1.0.4"
rstest="0.13"
